# ExperimentalTheatre

./: .gitignore  CMakeLists.txt  FindExperimentalTheatre.cmake  README.md
CellarWorkbench/: CMakeLists.txt  FileLists.cmake  LibLists.cmake  libCellarWorkbench_global.h
CellarWorkbench/Algorithm/: Noise.cpp  Noise.h
CellarWorkbench/Camera/: Camera.cpp  Camera.h  CameraManBird.cpp  CameraManBird.h  CameraManFree.cpp  CameraManFree.h
CellarWorkbench/DataStructure/: Barycenter.cpp  Barycenter.h  Grid2D.h  Grid3D.h  Matrix.h  Matrix3x3.h  Matrix4x4.h  MatrixStack.h  ObservableMatrixStack.h  PGrid2D.h  PGrid3D.h  Vector.h  Vector2D.h  Vector3D.h  Vector4D.h  VectorSpace.h
CellarWorkbench/DateAndTime/: AbstractClock.cpp  AbstractClock.h  CClock.cpp  CClock.h  Calendar.cpp  Calendar.h  Clock.cpp  Clock.h  QtClock.cpp  QtClock.h  Timer.cpp  Timer.h
CellarWorkbench/DesignPattern/: Multiton.h  Singleton.h  SpecificObserver.h  SpecificSubject.h
CellarWorkbench/GL/: GLFFmpegCamcorder.cpp  GLFFmpegCamcorder.h  GlFullscreen.cpp  GlFullscreen.h  GlInputsOutputs.cpp  GlInputsOutputs.h  GlProgram.cpp  GlProgram.h  GlShader.cpp  GlShader.h  GlShaderBank.cpp  GlShaderBank.h  GlToolkit.cpp  GlToolkit.h  GlVao.cpp  GlVao.h
CellarWorkbench/GL3/: gl3w.c  gl3w.h
CellarWorkbench/Geometry/: Plane3D.h  Segment2D.cpp  Segment2D.h  Segment3D.h
CellarWorkbench/Graphics/: Image.cpp  ImageBank.cpp  ImageBank.h
CellarWorkbench/Image/: Image.cpp  Image.h  ImageBank.cpp  ImageBank.h  ImageSampler.cpp  ImageSampler.h  Texture.cpp  Texture.h  TextureBank.cpp  TextureBank.h  TextureSampler.cpp  TextureSampler.h
CellarWorkbench/Misc/: CellarUtils.cpp  CellarUtils.h  Distribution.cpp  Distribution.h  FastMath.cpp  FastMath.h  Log.cpp  Log.h  SimplexNoise.cpp  SimplexNoise.h  StringUtils.cpp  StringUtils.h
CellarWorkbench/Path/: AbstractPath.h  BasisSplinePath.h  CompositePath.h  CubicSplinePath.h  LinearPath.h  PathVisitor.h  PointPath.h  PolynomialPath.h
CellarWorkbench/Triangle/: triangle.c  triangle.h
MediaWorkbench/: CMakeLists.txt  FileLists.cmake  LibLists.cmake  libMediaWorkbench_global.h
MediaWorkbench/Camera/: Camera.cpp  Camera.h  CameraManBird.cpp  CameraManBird.h  CameraManFree.cpp  CameraManFree.h
MediaWorkbench/Font/: DistanceMapFont.h
MediaWorkbench/GL/: GLFFmpegCamcorder.cpp  GLFFmpegCamcorder.h  GlInputsOutputs.cpp  GlInputsOutputs.h  GlProgram.cpp  GlProgram.h  GlShader.cpp  GlShader.h  GlShaderBank.cpp  GlShaderBank.h  GlToolkit.cpp  GlToolkit.h  GlVao.cpp  GlVao.h
MediaWorkbench/GL3/: gl3w.c  gl3w.h  windllexport.py
MediaWorkbench/Image/: Image.cpp  Image.h  ImageBank.cpp  ImageBank.h
MediaWorkbench/Light/: Light3D.cc  Light3D.cpp  Light3D.h
MediaWorkbench/Text/: DistanceFieldFont.cpp  DistanceFieldFont.h
PropRoom2D/: AbstractProp.cpp  AbstractProp.h  CMakeLists.txt  FileLists.cmake  LibLists.cmake  libPropRoom2D_global.h
PropRoom2D/Costume/: AbstractCostume.cpp  AbstractCostume.h  CircleCostume.cpp  CircleCostume.h  PolygonCostume.cpp  PolygonCostume.h
PropRoom2D/Hardware/: Hardware.cpp  Hardware.h
PropRoom2D/Hud/: AbstractHud.cpp  AbstractHud.h  ImageHud.cpp  ImageHud.h  TextHud.cpp  TextHud.h
PropRoom2D/Material/: Material.cpp  Material.h
PropRoom2D/Prop/: AbstractProp.h
PropRoom2D/PropTeam/: AbstractArtDirector.h  AbstractChoreographer.h  AbstractPropDesigner.h  AbstractPropTeam.cpp  AbstractPropTeam.h  AbstractTeamMember.h  GlArtDirector.cpp  GlArtDirector.h  GlArtDirectorShaders.cpp  GlArtDirectorShaders.h  StdChoreographer.cpp  StdChoreographer.h  StdGlPropTeam.cpp  StdGlPropTeam.h  StdPropDesigner.cpp  StdPropDesigner.h
PropRoom2D/Shape/: AbstractShape.cpp  AbstractShape.h  Circle.cpp  Circle.h  Polygon.cpp  Polygon.h  Segment2D.h
PropRoom2D/Team/: AbstractTeam.cpp  AbstractTeam.h  StdTeam.cpp  StdTeam.h
PropRoom2D/resources/: PropRoom2D_Resources.qrc
PropRoom3D/: AbstractProp.cpp  AbstractProp.h  CMakeLists.txt  FileLists.cmake  LibLists.cmake  libPropRoom3D_global.h
PropRoom3D/Costume/: AbstractCostume.cpp  AbstractCostume.h  FlatPaint.cpp
PropRoom3D/Environment/: Environment.cpp  Environment.h
PropRoom3D/Hardware/: Hardware.cpp  Hardware.h
PropRoom3D/Light/: Environment.cpp  Environment.h  Light.cpp  Light.h  Light3D.h  LightBulb.cpp  LightBulb.h  LightUtils.cpp
PropRoom3D/Lighting/: Light3D.cpp
PropRoom3D/Material/: Material.cpp  Material.h
PropRoom3D/Node/: HandleNode.cpp  HandleNode.h  Node.cpp  Node.h  StageSet.cpp  StageSet.h  StageZone.cpp  StageZone.h  Visitor.cpp  Visitor.h
PropRoom3D/Prop/: Prop.cpp  Prop.h
PropRoom3D/PropTeam/: AbstractArtDirector.h  AbstractChoreographer.h  AbstractPropDesigner.h  AbstractPropTeam.cpp  AbstractPropTeam.h  AbstractTeamMember.h  CpuRaytracer.cpp  CpuRaytracer.h  StdChoreographer.cpp  StdGlPropTeam.cpp  StdGlPropTeam.h  StdPropDesigner.cpp  StdPropDesigner.h
PropRoom3D/Ray/: RayHitList.cpp  RayHitList.h  RayHitReport.cpp  RayHitReport.h  RayUtils.cpp  RayUtils.h  Raycast.cpp  Raycast.h
PropRoom3D/Scene/: Scene.cpp  Scene.h  SceneJson.cpp  SceneJson.h  SceneJsonReader.cpp  SceneJsonReader.h  SceneJsonTags.cpp  SceneJsonTags.h  SceneJsonWriter.cpp  SceneJsonWriter.h  SceneNode.cpp  SceneNode.h  SceneReader.cpp  SceneReader.h  SceneVisitor.cpp  SceneVisitor.h  SceneWriter.cpp  SceneWriter.h
PropRoom3D/Serial/: JsonReader.cpp  JsonReader.h  JsonTags.cpp  JsonTags.h  JsonWriter.cpp  JsonWriter.h  Visitor.cpp  Visitor.h
PropRoom3D/Shape/: AbstractShape.cpp  AbstractShape.h  Brep.cpp  Brep.h
PropRoom3D/StageSet/: StageSet.cpp  StageSet.h  StageSetJsonReader.cpp  StageSetJsonReader.h  StageSetJsonTags.cpp  StageSetJsonTags.h  StageSetJsonWriter.cpp  StageSetJsonWriter.h  StageSetNode.cpp  StageSetNode.h  StageSetVisitor.cpp  StageSetVisitor.h
PropRoom3D/Team/: AbstractTeam.cpp  AbstractTeam.h  AbstractTeamMember.h  DummyTeam.cpp  DummyTeam.h  StdGlTeam.cpp  StdGlTeam.h  StdTeam.cpp  StdTeam.h
PropRoom3D/resources/: PropRoom3D_Resources.qrc
Scaena/: CMakeLists.txt  FileLists.cmake  LibLists.cmake  libScaena_global.h
_GL3/: CMakeLists.txt  gl3w.c
doc/: Doxyfile  (+1 more)
(+416 files in other folders)
