CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

MESSAGE(STATUS "Building Experimental Theatre framework")
PROJECT(ExperimentalTheatre CXX)

IF(CMAKE_COMPILER_IS_GNUCXX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ELSEIF(MSVC)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4251") # dll interface
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4244") # int to float
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4351") # array init new behavior
ENDIF()

SET(EXPERIMETAL_THEATRE_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "Experimental Theatre src dir: ${EXPERIMETAL_THEATRE_SRC_DIR}")
SET(EXPERIMETAL_THEATRE_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "Experimental Theatre bin dir: ${EXPERIMETAL_THEATRE_BIN_DIR}")
SET(EXPERIMETAL_THEATRE_INSTALL_DIR ${CMAKE_INSTALL_PREFIX})
MESSAGE(STATUS "Experimental Theatre install dir: ${EXPERIMETAL_THEATRE_INSTALL_DIR}")

SET(LIB_TYPE SHARED)
MESSAGE(STATUS "Experimental Theatre library type: ${LIB_TYPE}")


# Build of the GL3W library
ADD_SUBDIRECTORY(_GL3)

# Experimental Theatre's libraries
ADD_SUBDIRECTORY(CellarWorkbench)
ADD_SUBDIRECTORY(MediaWorkbench)
ADD_SUBDIRECTORY(PropRoom2D)
ADD_SUBDIRECTORY(Scaena)

# Unit tests (empty)
ADD_SUBDIRECTORY(UnitTests)
