MESSAGE(STATUS "Building Cellar Workbench library")
PROJECT(CellarWorkbench CXX)

SET(CELLAR_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "Cellar Workbench src dir: " ${CELLAR_SRC_DIR})
SET(CELLAR_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "Cellar Workbench bin dir: " ${CELLAR_BIN_DIR})
SET(CELLAR_INSTALL_DIR ${CMAKE_INSTALL_PREFIX})
MESSAGE(STATUS "Cellar Workbench install dir: ${CELLAR_INSTALL_DIR}")

INCLUDE(FileLists.cmake)
INCLUDE(LibLists.cmake)

ADD_DEFINITIONS(-DCELLARWORKBENCH_LIBRARY)

ADD_LIBRARY(CellarWorkbench ${LIB_TYPE} ${CELLAR_SRC_FILES})
TARGET_LINK_LIBRARIES(CellarWorkbench ${CELLAR_LIBRARIES})
INCLUDE_DIRECTORIES(${CELLAR_INCLUDE_DIR})
MESSAGE(STATUS "Cellar Workbench include dir: ${CELLAR_INCLUDE_DIR}")

INSTALL(TARGETS CellarWorkbench
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)
INSTALL(DIRECTORY ${CELLAR_SRC_DIR}/
        DESTINATION include/CellarWorkbench
        FILES_MATCHING PATTERN "*.h")
