SET(CELLAR_PROJECT CellarWorkbench )
SET(CELLAR_PROJECT ${CELLAR_PROJECT} PARENT_SCOPE)
MESSAGE(STATUS "Building ${CELLAR_PROJECT} library")
PROJECT(${CELLAR_PROJECT} CXX)

SET(CELLAR_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(CELLAR_SRC_DIR ${CELLAR_SRC_DIR} PARENT_SCOPE)
MESSAGE(STATUS "${CELLAR_PROJECT} src dir: " ${CELLAR_SRC_DIR})
SET(CELLAR_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "${CELLAR_PROJECT} bin dir: " ${CELLAR_BIN_DIR})
SET(CELLAR_INSTALL_DIR ${CMAKE_INSTALL_PREFIX})
MESSAGE(STATUS "${CELLAR_PROJECT} install dir: ${CELLAR_INSTALL_DIR}")


INCLUDE(LibLists.cmake)
INCLUDE(FileLists.cmake)


MESSAGE(STATUS "${CELLAR_PROJECT} libraires: ${CELLAR_LIBRARIES}")
MESSAGE(STATUS "${CELLAR_PROJECT} Qt modules: ${CELLAR_QT_MODULES}")
MESSAGE(STATUS "${CELLAR_PROJECT} include dirs: ${CELLAR_INCLUDE_DIR}")


ADD_DEFINITIONS(-DCELLARWORKBENCH_LIBRARY)

ADD_LIBRARY(${CELLAR_PROJECT} ${LIB_TYPE} ${CELLAR_SRC_FILES})
TARGET_LINK_LIBRARIES(${CELLAR_PROJECT} ${CELLAR_LIBRARIES})
QT5_USE_MODULES(${CELLAR_PROJECT} ${CELLAR_QT_MODULES})
INCLUDE_DIRECTORIES(${CELLAR_INCLUDE_DIR})

INSTALL(TARGETS ${CELLAR_PROJECT}
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)
INSTALL(DIRECTORY ${CELLAR_SRC_DIR}/
        DESTINATION include/${EXTH_INSTALL_DIR}/${CELLAR_PROJECT}
        FILES_MATCHING PATTERN "*.h")
