MESSAGE(STATUS "Building Media Workbench library")
PROJECT(MediaWorkbench)

SET(MEDIA_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "Media Workbenchsrc dir: ${MEDIA_SRC_DIR}")
SET(MEDIA_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "Media Workbench bin dir: ${MEDIA_BIN_DIR}")
SET(MEDIA_INSTALL_DIR ${CMAKE_INSTALL_PREFIX})
MESSAGE(STATUS "Media Workbench install dir: ${MEDIA_INSTALL_DIR}")

INCLUDE(FileLists.cmake)
INCLUDE(LibLists.cmake)

ADD_DEFINITIONS(-DMEDIAWORKBENCH_LIBRARY)

ADD_LIBRARY(MediaWorkbench ${LIB_TYPE} ${MEDIA_SRC_FILES})
TARGET_LINK_LIBRARIES(MediaWorkbench ${MEDIA_LIBRARIES})
INCLUDE_DIRECTORIES(${MEDIA_INCLUDE_DIR})
MESSAGE(STATUS "Media Workbench include dir: ${MEDIA_INCLUDE_DIR}")

INSTALL(TARGETS MediaWorkbench
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)
INSTALL(DIRECTORY ${MEDIA_SRC_DIR}/
        DESTINATION include/MediaWorkbench
        FILES_MATCHING PATTERN "*.h")
