SET(MEDIA_PROJECT MediaWorkbench)
SET(MEDIA_PROJECT ${MEDIA_PROJECT} PARENT_SCOPE)
MESSAGE(STATUS "Building ${MEDIA_PROJECT} library")
PROJECT(${MEDIA_PROJECT} CXX)

SET(MEDIA_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(MEDIA_SRC_DIR ${MEDIA_SRC_DIR} PARENT_SCOPE)
MESSAGE(STATUS "${MEDIA_PROJECT} src dir: ${MEDIA_SRC_DIR}")
SET(MEDIA_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "${MEDIA_PROJECT} bin dir: ${MEDIA_BIN_DIR}")
SET(MEDIA_INSTALL_DIR ${CMAKE_INSTALL_PREFIX})
MESSAGE(STATUS "${MEDIA_PROJECT} install dir: ${MEDIA_INSTALL_DIR}")


INCLUDE(LibLists.cmake)
INCLUDE(FileLists.cmake)


MESSAGE(STATUS "${MEDIA_PROJECT} libraires: ${MEDIA_LIBRARIES}")
MESSAGE(STATUS "${MEDIA_PROJECT} Qt modules: ${MEDIA_QT_MODULES}")
MESSAGE(STATUS "${MEDIA_PROJECT} include dirs: ${MEDIA_INCLUDE_DIR}")


ADD_DEFINITIONS(-DMEDIAWORKBENCH_LIBRARY)

ADD_LIBRARY(${MEDIA_PROJECT} ${LIB_TYPE} ${MEDIA_SRC_FILES})
TARGET_LINK_LIBRARIES(${MEDIA_PROJECT} ${MEDIA_LIBRARIES})
QT5_USE_MODULES(${MEDIA_PROJECT} ${MEDIA_QT_MODULES})
INCLUDE_DIRECTORIES(${MEDIA_INCLUDE_DIR})

INSTALL(TARGETS ${MEDIA_PROJECT}
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)
INSTALL(DIRECTORY ${MEDIA_SRC_DIR}/
        DESTINATION include/${EXTH_INSTALL_DIR}/${MEDIA_PROJECT}
        FILES_MATCHING PATTERN "*.h")
