MESSAGE(STATUS "Building Prop Room 2D library")
PROJECT(PropRoom2D CXX)

SET(PROP2_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "Prop Room 2D src dir: ${PROP2_SRC_DIR}")
SET(PROP2_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "Prop Room 2D bin dir: ${PROP2_BIN_DIR}")
SET(PROP2_INSTALL_DIR ${CMAKE_INSTALL_PREFIX})
MESSAGE(STATUS "Prop Room 2D install dir: ${PROP2_INSTALL_DIR}")

INCLUDE(FileLists.cmake)
INCLUDE(LibLists.cmake)

ADD_DEFINITIONS(-DPROPROOM2D_LIBRARY)

ADD_LIBRARY(PropRoom2D ${LIB_TYPE} ${PROP2_SRC_FILES})
TARGET_LINK_LIBRARIES(PropRoom2D ${PROP2_LIBRARIES})
INCLUDE_DIRECTORIES(${PROP2_INCLUDE_DIR})
MESSAGE(STATUS "Prop Room 2D include dir: ${PROP2_INCLUDE_DIR}")

INSTALL(TARGETS PropRoom2D
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)
INSTALL(DIRECTORY ${PROP2_SRC_DIR}/
        DESTINATION include/PropRoom2D
        FILES_MATCHING PATTERN "*.h")
