SET(PROP2_PROJECT PropRoom2D)
SET(PROP2_PROJECT ${PROP2_PROJECT} PARENT_SCOPE)
MESSAGE(STATUS "Building ${PROP2_PROJECT} library")
PROJECT(${PROP2_PROJECT} CXX)

SET(PROP2_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(PROP2_SRC_DIR ${PROP2_SRC_DIR} PARENT_SCOPE)
MESSAGE(STATUS "${PROP2_PROJECT} src dir: ${PROP2_SRC_DIR}")
SET(PROP2_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "${PROP2_PROJECT} bin dir: ${PROP2_BIN_DIR}")
SET(PROP2_INSTALL_DIR ${CMAKE_INSTALL_PREFIX})
MESSAGE(STATUS "${PROP2_PROJECT} install dir: ${PROP2_INSTALL_DIR}")


INCLUDE(LibLists.cmake)
INCLUDE(FileLists.cmake)


MESSAGE(STATUS "${PROP2_PROJECT} libraires: ${PROP2_LIBRARIES}")
MESSAGE(STATUS "${PROP2_PROJECT} Qt modules: ${PROP2_QT_MODULES}")
MESSAGE(STATUS "${PROP2_PROJECT} include dirs: ${PROP2_INCLUDE_DIR}")


ADD_DEFINITIONS(-DPROPROOM2D_LIBRARY)

ADD_LIBRARY(${PROP2_PROJECT} ${LIB_TYPE} ${PROP2_SRC_FILES})
TARGET_LINK_LIBRARIES(${PROP2_PROJECT} ${PROP2_LIBRARIES})
QT5_USE_MODULES(${PROP2_PROJECT} ${PROP2_QT_MODULES})
INCLUDE_DIRECTORIES(${PROP2_INCLUDE_DIR})

INSTALL(TARGETS ${PROP2_PROJECT}
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)
INSTALL(DIRECTORY ${PROP2_SRC_DIR}/
        DESTINATION include/${EXTH_INSTALL_DIR}/${PROP2_PROJECT}
        FILES_MATCHING PATTERN "*.h")
