MESSAGE(STATUS "Building Prop Room 3D library")
PROJECT(PropRoom3D)

SET(PROP3_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "Prop Room 3D src dir: ${PROP3_SRC_DIR}")
SET(PROP3_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "Prop Room 3D bin dir: ${PROP3_BIN_DIR}")
SET(PROP3_INSTALL_DIR ${CMAKE_INSTALL_PREFIX})
MESSAGE(STATUS "Prop Room 3D install dir: ${PROP3_INSTALL_DIR}")

INCLUDE(FileLists.cmake)
INCLUDE(LibLists.cmake)

ADD_LIBRARY(PropRoom3D ${LIB_TYPE} ${PROP3_SRC_FILES})
LINK_LIBRARIES(PropRoom3D ${PROP3_LIBRARIES})
INCLUDE_DIRECTORIES(${CELLAR_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PROP3_INCLUDE_DIR})
MESSAGE(STATUS "Prop Room 3D include dir: ${PROP3_INCLUDE_DIR}")

INSTALL(TARGETS PropRoom3D
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)
INSTALL(DIRECTORY ${PROP3_SRC_DIR}/
        DESTINATION include/PropRoom3D
        FILES_MATCHING PATTERN "*.h")
