MESSAGE(STATUS "Building Scaena library")
PROJECT(Scaena CXX)

SET(SCAENA_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "Scaena src dir: ${SCAENA_SRC_DIR}")
SET(SCAENA_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "Scaena bin dir: ${SCAENA_BIN_DIR}")
SET(SCAENA_INSTALL_DIR ${CMAKE_INSTALL_PREFIX})
MESSAGE(STATUS "Scaena install dir: ${SCAENA_INSTALL_DIR}")

INCLUDE(FileLists.cmake)
INCLUDE(LibLists.cmake)

ADD_DEFINITIONS(-DSCAENA_LIBRARY)

ADD_LIBRARY(Scaena ${LIB_TYPE} ${SCAENA_SRC_FILES})
TARGET_LINK_LIBRARIES(Scaena ${SCAENA_LIBRARIES})
INCLUDE_DIRECTORIES(${SCAENA_INCLUDE_DIR})
MESSAGE(STATUS "Scaena include dir: ${SCAENA_INCLUDE_DIR}")

INSTALL(TARGETS Scaena
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)
INSTALL(DIRECTORY ${SCAENA_SRC_DIR}/
        DESTINATION include/Scaena
        FILES_MATCHING PATTERN "*.h")
