SET(SCAENA_PROJECT Scaena)
SET(SCAENA_PROJECT ${SCAENA_PROJECT} PARENT_SCOPE)
MESSAGE(STATUS "Building ${SCAENA_PROJECT} library")
PROJECT(${SCAENA_PROJECT} CXX)

SET(SCAENA_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(SCAENA_SRC_DIR ${SCAENA_SRC_DIR} PARENT_SCOPE)
MESSAGE(STATUS "${SCAENA_PROJECT} src dir: ${SCAENA_SRC_DIR}")
SET(SCAENA_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "${SCAENA_PROJECT} bin dir: ${SCAENA_BIN_DIR}")
SET(SCAENA_INSTALL_DIR ${CMAKE_INSTALL_PREFIX})
MESSAGE(STATUS "${SCAENA_PROJECT} install dir: ${SCAENA_INSTALL_DIR}")


INCLUDE(LibLists.cmake)
INCLUDE(FileLists.cmake)


MESSAGE(STATUS "${SCAENA_PROJECT} libraires: ${SCAENA_LIBRARIES}")
MESSAGE(STATUS "${SCAENA_PROJECT} Qt modules: ${SCAENA_QT_MODULES}")
MESSAGE(STATUS "${SCAENA_PROJECT} include dirs: ${SCAENA_INCLUDE_DIR}")


ADD_DEFINITIONS(-DSCAENA_LIBRARY)

ADD_LIBRARY(${SCAENA_PROJECT} ${LIB_TYPE} ${SCAENA_SRC_FILES})
TARGET_LINK_LIBRARIES(${SCAENA_PROJECT} ${SCAENA_LIBRARIES})
QT5_USE_MODULES(${SCAENA_PROJECT} ${SCAENA_QT_MODULES})
INCLUDE_DIRECTORIES(${SCAENA_INCLUDE_DIR})

INSTALL(TARGETS ${SCAENA_PROJECT}
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)
INSTALL(DIRECTORY ${SCAENA_SRC_DIR}/
        DESTINATION include/${SCAENA_PROJECT}
        FILES_MATCHING PATTERN "*.h")
