SET(GL3_PROJECT GL3)
SET(GL3_PROJECT ${GL3_PROJECT} PARENT_SCOPE)
MESSAGE(STATUS "Building ${GL3_PROJECT} library")
PROJECT(${GL3_PROJECT} C)

SET(GL3_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(GL3_SRC_DIR ${GL3_SRC_DIR} PARENT_SCOPE)
MESSAGE(STATUS "${GL3_PROJECT} src dir: ${GL3_SRC_DIR}")
SET(GL3_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "${GL3_PROJECT} bin dir: ${GL3_BIN_DIR}")
SET(GL3_INSTALL_DIR ${CMAKE_INSTALL_PREFIX})
MESSAGE(STATUS "${GL3_PROJECT} install dir: ${GL3_INSTALL_DIR}")
SET(GL3_INCLUDE_DIR ${GL3_SRC_DIR} PARENT_SCOPE)
MESSAGE(STATUS "${GL3_PROJECT} include dir: ${GL3_INCLUDE_DIR}")


ADD_DEFINITIONS(-DGL3_LIBRARY)
FIND_PACKAGE(OpenGL REQUIRED)

SET(GL3_SRC_FILES
    gl3w.c
    gl3w.h
    glcorearb.h
    scripts/gl3w_gen.py
    scripts/windllexport.py)

ADD_LIBRARY(${GL3_PROJECT} ${LIB_TYPE} ${GL3_SRC_FILES})
TARGET_LINK_LIBRARIES(${GL3_PROJECT} ${OPENGL_LIBRARIES})
INCLUDE_DIRECTORIES(${GL3_INCLUDE_DIR})

INSTALL(TARGETS ${GL3_PROJECT}
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)
INSTALL(DIRECTORY ${GL3_SRC_DIR}/
        DESTINATION include/${GL3_PROJECT}
        FILES_MATCHING PATTERN "*.h")
