SET(GLM_PROJECT GLM)
SET(GLM_PROJECT ${GLM_PROJECT} PARENT_SCOPE)
MESSAGE(STATUS "Building ${GLM_PROJECT} library")
PROJECT(${GLM_PROJECT} CXX)

SET(GLM_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(GLM_SRC_DIR ${GLM_SRC_DIR} PARENT_SCOPE)

INSTALL(DIRECTORY ${GLM_SRC_DIR}/
        DESTINATION include/${EXTH_OTS_DIRECTORY}/${GLM_PROJECT}
        FILES_MATCHING
            PATTERN "*.hpp"
            PATTERN "*.inl")
