SET(TRIANGLE_PROJECT Triangle)
SET(TRIANGLE_PROJECT ${TRIANGLE_PROJECT} PARENT_SCOPE)
MESSAGE(STATUS "Building ${TRIANGLE_PROJECT} library")
PROJECT(${TRIANGLE_PROJECT} C)

SET(TRIANGLE_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
SET(TRIANGLE_SRC_DIR ${TRIANGLE_SRC_DIR} PARENT_SCOPE)
MESSAGE(STATUS "${TRIANGLE_PROJECT} src dir: ${TRIANGLE_SRC_DIR}")
SET(TRIANGLE_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "${TRIANGLE_PROJECT} bin dir: ${TRIANGLE_BIN_DIR}")
SET(TRIANGLE_INSTALL_DIR ${CMAKE_INSTALL_PREFIX})
MESSAGE(STATUS "${TRIANGLE_PROJECT} install dir: ${TRIANGLE_INSTALL_DIR}")
SET(TRIANGLE_INCLUDE_DIR ${TRIANGLE_SRC_DIR} PARENT_SCOPE)
MESSAGE(STATUS "${TRIANGLE_PROJECT} include dir: ${TRIANGLE_INCLUDE_DIR}")


ADD_DEFINITIONS(-DTRILIBRARY)

SET(TRIANGLE_SRC_FILES
    triangle.c
    triangle.h
    README)

ADD_LIBRARY(${TRIANGLE_PROJECT} ${LIB_TYPE} ${TRIANGLE_SRC_FILES})
INCLUDE_DIRECTORIES(${TRIANGLE_INCLUDE_DIR})

INSTALL(TARGETS ${TRIANGLE_PROJECT}
        RUNTIME DESTINATION bin
        LIBRARY DESTINATION lib
        ARCHIVE DESTINATION lib)
INSTALL(DIRECTORY ${TRIANGLE_SRC_DIR}/
        DESTINATION include/${EXTH_INSTALL_DIR}/${TRIANGLE_PROJECT}
        FILES_MATCHING PATTERN "*.h")
