CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)

SET(PROJECTNAME_PROJECT PROJECTNAME)
MESSAGE(STATUS "Building ${PROJECTNAME_PROJECT}")
PROJECT(${PROJECTNAME_PROJECT} CXX)

IF(CMAKE_COMPILER_IS_GNUCXX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ELSEIF(MSVC)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4251") # dll interface
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4244") # int to float
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4351") # array init new behavior
ENDIF()

SET(PROJECTNAME_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR})
MESSAGE(STATUS "${PROJECTNAME_PROJECT} src dir: ${PROJECTNAME_SRC_DIR}")
SET(PROJECTNAME_BIN_DIR ${CMAKE_CURRENT_BINARY_DIR})
MESSAGE(STATUS "${PROJECTNAME_PROJECT} bin dir: ${PROJECTNAME_BIN_DIR}")


INCLUDE(LibLists.cmake)
INCLUDE(FileLists.cmake)

MESSAGE(STATUS "${PROJECTNAME_PROJECT} libraires: ${PROJECTNAME_LIBRARIES}")
MESSAGE(STATUS "${PROJECTNAME_PROJECT} Qt modules: ${PROJECTNAME_QT_MODULES}")
MESSAGE(STATUS "${PROJECTNAME_PROJECT} include dirs: ${PROJECTNAME_INCLUDE_DIRS}")

INCLUDE_DIRECTORIES(${PROJECTNAME_INCLUDE_DIRS})
ADD_EXECUTABLE(${PROJECTNAME_PROJECT} ${PROJECTNAME_SRC_FILES})
TARGET_LINK_LIBRARIES(${PROJECTNAME_PROJECT} ${PROJECTNAME_LIBRARIES})
QT5_USE_MODULES(${PROJECTNAME_PROJECT} ${PROJECTNAME_QT_MODULES})
